--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -86,7 +86,7 @@
                     <span class="upper_line"></span>
                     <h1 class="center_title">What we do</h1>
                     <div class="trade_center">
-                        <img class="trade_image" src="./assets/trade_center.png" alt="trade_image">
+                        <img class="trade_image" src="./assets/trade_center.jpg" alt="trade_image">
                         <div class="center_informations">
                             <p class="informations_title">One world</p>
                             <h1 class="center_heading">Trade Center</h1>
@@ -271,43 +271,44 @@
             </div>
         </form>-->
     </section>
-        <section class="footer_section">
-            <!--<img class="footer_image" alt="footer_image" src="./assets/footerbck.jpg">-->
-            <div class="footer_container">
-                <div class="footer_content">
-                    <a><img class="footer_logo" src="./assets/footer_logo.png"></a>
-                    <div class="social_nav footer_nav">
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                    </div>
-            
+    <section class="footer_section">
+        <!--<img class="footer_image" alt="footer_image" src="./assets/footerbck.jpg">-->
+        <div class="footer_container">
+            <div class="footer_content">
+                <a><img class="footer_logo" src="./assets/footer_logo.png"></a>
+                <div class="social_nav footer_nav">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
 
-                </div>
+
             </div>
-        </section>
-        <form>
-            <div class="form_container">
-                <div class="form_content">
-                    <span class="form_line"></span>
-                    <h1 class="form_title">Get in touch</h1>
-                    <div class="form_info">
-                        <div class="company_info">
-                            <p class="contacts"><i class="fa-solid fa-location-dot" id="form_location"></i>91 Nolan Extensions Suite
-                                670</p>
-                            <p class="contacts"><i class="fa-solid fa-phone"></i>+001 356-868-2454</p>
-                            <p class="contacts"><i class="fa-solid fa-inbox"></i>montichello@service.com</p>
-                            <p class="contacts"><i class="fa-regular fa-clock"></i>From 07:05AM to 19:30PM</p>
-                        </div>
-                        <div class="form_input">
-                            <input type="text" id="fullname" name="fullname" placeholder="Full Name" class="form_name"><br>
-                            <input type="text" id="mail" name="mail" placeholder="Email" class="form_email"><br>
-                            <input type="submit" class="form_button">
-                        </div>
+        </div>
+    </section>
+    <form>
+        <div class="form_container">
+            <div class="form_content">
+                <span class="form_line"></span>
+                <h1 class="form_title">Get in touch</h1>
+                <div class="form_info">
+                    <div class="company_info">
+                        <p class="contacts"><i class="fa-solid fa-location-dot" id="form_location"></i>91 Nolan
+                            Extensions Suite
+                            670</p>
+                        <p class="contacts"><i class="fa-solid fa-phone"></i>+001 356-868-2454</p>
+                        <p class="contacts"><i class="fa-solid fa-inbox"></i>montichello@service.com</p>
+                        <p class="contacts"><i class="fa-regular fa-clock"></i>From 07:05AM to 19:30PM</p>
+                    </div>
+                    <div class="form_input">
+                        <input type="text" id="fullname" name="fullname" placeholder="Full Name" class="form_name"><br>
+                        <input type="text" id="mail" name="mail" placeholder="Email" class="form_email"><br>
+                        <input type="submit" class="form_button">
                     </div>
                 </div>
             </div>
-        </form>
+        </div>
+    </form>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
