changed linear gradient

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -116,13 +116,13 @@
                             <button class="center_button">More details</button>
                             <p class="center_location"><i class="fa-solid fa-location-dot"></i>Hong Kong - 1588 feet</p>
                         </div>
-                        <img class="commerce_image" src="./assets/commerce_center.png" alt="commerce_image">
+                        <img class="commerce_image" src="./assets/commerce_center.jpg" alt="commerce_image">
                     </div>
                 </div>
             </div>
         </section>
         <section class="news_section">
-            <img class="news_bck" src="./assets/news_bck.png" alt="news_bck">
+            <!--<img class="news_bck" src="./assets/news_bck.jpg" alt="news_bck">-->
             <div class="news_container">
                 <div class="news_content">
                     <span class="news_line"></span>
