chnged pics format to jpg

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -37,6 +37,7 @@
     <div class="page_wrapper">
         <section class="header_section">
             <img class="heading_bck" src="./assets/heading_bck.png" alt="heading_bck">
+            <img class="header_dots" src="./assets/Dots.svg" alt="header_dots">
             <div class="header_container">
                 <div class="header_content">
                     <div class="header_nav">
@@ -130,14 +131,14 @@
                     <div class="my_slider">
                         <div class="news_card">
                             <div class="unmatched">
-                                <img class="beauty_card" src="./assets/unmatched_beauty.png" alt="beauty_card">
+                                <img class="beauty_card" src="./assets/unmatched.jpg" alt="beauty_card">
                                 <div class="card_info">
                                     <h1 class="card_heading">See the unmatched beauty of the great.</h1>
                                     <p class="card_description">Free directories: directories are perfect for customers
                                         that
                                         are searching for...</p>
                                     <div class="author_card">
-                                        <img class="author_image" src="./assets/Alja.png">
+                                        <img class="author_image" src="./assets/AljaBrun.jpg">
                                         <div class="author_info">
                                             <p class="author_name">ALJA BRUN</p>
                                             <p class="author_date">20 Jan 2020</p>
@@ -148,14 +149,14 @@
                         </div>
                         <div class="news_card">
                             <div class="advertising">
-                                <img class="advertising_card" src="./assets/advertising.png" alt="advertising_card">
+                                <img class="advertising_card" src="./assets/advertising.jpg" alt="advertising_card">
                                 <div class="card_info">
                                     <h1 class="card_heading">Effective advertising pointers.</h1>
                                     <p class="card_description">Having a home based business is a wonderful asset to
                                         your
                                         life...</p>
                                     <div class="author_card">
-                                        <img class="author_image" src="./assets/Dominic.png">
+                                        <img class="author_image" src="./assets/DominicFreeman.jpg">
                                         <div class="author_info">
                                             <p class="author_name">Dominic Freeman</p>
                                             <p class="author_date">13 Dec 2019</p>
@@ -166,13 +167,13 @@
                         </div>
                         <div class="news_card">
                             <div class="hypnotize">
-                                <img class="hypnotize_card" src="./assets/hypnotize.png" alt="hypnotize_card">
+                                <img class="hypnotize_card" src="./assets/hypnotize.jpg" alt="hypnotize_card">
                                 <div class="card_info">
                                     <h1 class="card_heading">Hypnotize yourself into the ghost.</h1>
                                     <p class="card_description">There are many things that are important to catalog
                                         design...</p>
                                     <div class="author_card">
-                                        <img class="author_image" src="./assets/Alice.png">
+                                        <img class="author_image" src="./assets/AliceWard.jpg">
                                         <div class="author_info">
                                             <p class="author_name">Alice Ward</p>
                                             <p class="author_date">30 Nov 2019</p>
@@ -183,13 +184,13 @@
                         </div>
                         <div class="news_card">
                             <div class="hypnotize">
-                                <img class="hypnotize_card" src="./assets/hypnotize.png" alt="hypnotize_card">
+                                <img class="hypnotize_card" src="./assets/hypnotize.jpg" alt="hypnotize_card">
                                 <div class="card_info">
                                     <h1 class="card_heading">Hypnotize yourself into the ghost.</h1>
                                     <p class="card_description">There are many things that are important to catalog
                                         design...</p>
                                     <div class="author_card">
-                                        <img class="author_image" src="./assets/Alice.png">
+                                        <img class="author_image" src="./assets/AliceWard.jpg">
                                         <div class="author_info">
                                             <p class="author_name">Alice Ward</p>
                                             <p class="author_date">30 Nov 2019</p>
@@ -200,13 +201,13 @@
                         </div>
                         <div class="news_card">
                             <div class="hypnotize">
-                                <img class="hypnotize_card" src="./assets/hypnotize.png" alt="hypnotize_card">
+                                <img class="hypnotize_card" src="./assets/hypnotize.jpg" alt="hypnotize_card">
                                 <div class="card_info">
                                     <h1 class="card_heading">Hypnotize yourself into the ghost.</h1>
                                     <p class="card_description">There are many things that are important to catalog
                                         design...</p>
                                     <div class="author_card">
-                                        <img class="author_image" src="./assets/Alice.png">
+                                        <img class="author_image" src="./assets/AliceWard.jpg">
                                         <div class="author_info">
                                             <p class="author_name">Alice Ward</p>
                                             <p class="author_date">30 Nov 2019</p>
@@ -275,7 +276,7 @@
         <!--<img class="footer_image" alt="footer_image" src="./assets/footerbck.jpg">-->
         <div class="footer_container">
             <div class="footer_content">
-                <a><img class="footer_logo" src="./assets/footer_logo.png"></a>
+                <a><img class="footer_logo" src="./assets/footer_logo.jpg"></a>
                 <div class="social_nav footer_nav">
                     <i class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-twitter"></i>
