changed header bck

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -36,7 +36,7 @@
 <body>
     <div class="page_wrapper">
         <section class="header_section">
-            <img class="heading_bck" src="./assets/heading_bck.png" alt="heading_bck">
+            <img class="heading_bck" src="./assets/header_bck.jpg" alt="heading_bck">
             <img class="header_dots" src="./assets/Dots.svg" alt="header_dots">
             <div class="header_container">
                 <div class="header_content">
