changed header bck

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -276,7 +276,7 @@
         <!--<img class="footer_image" alt="footer_image" src="./assets/footerbck.jpg">-->
         <div class="footer_container">
             <div class="footer_content">
-                <a><img class="footer_logo" src="./assets/footer_logo.jpg"></a>
+                <a><img class="footer_logo" src="./assets/footer_logo.svg"></a>
                 <div class="social_nav footer_nav">
                     <i class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-twitter"></i>
