adding fitness-app to the root

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <li>
             <a href="./Project_2/">Project_2</a>
         </li>
+        <li>
+            <a href="./fitness-app/">Fitness-App</a>
+        </li>
     </ul>
 </body>
 </html>
