--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="./Project_2/">Project_2</a>
         </li>
         <li>
-            <a href="./fitness-app/">Fitness-App</a>
+            <a href="./fitness-app/src/App.js">Fitness-App</a>
         </li>
     </ul>
 </body>
